add authors and links

--- a/index.html
+++ b/index.html
@@ -201,10 +201,75 @@
     <!-- Main -->
     <div id="main"
         style="padding-bottom:1em; padding-top: 5em; width: 70em; max-width: 70em; margin-left: auto; margin-right: auto;">
-        
+
+        <div class="box alt" style="margin-bottom: 1em;">
+            <div class="row 0% uniform" style="width: 100%; display: flex; justify-content: space-between;">
+                <!-- Stanford Logo -->
+                <div class="2u" style="font-size: 1em; line-height: 1.5em; text-align: center; width: 20%">
+                    <span class="image fit" style="margin-bottom: 0.5em; margin-top: 0.3em">
+                        <img src="images/stanford_logo.png" alt="">
+                    </span>
+                </div>
+                <!-- TRI Logo -->
+                <div class="2u" style="font-size: 1em; line-height: 1.5em; text-align: center; width: 22%">
+                    <span class="image fit" style="margin-bottom: 0.5em; margin-top: 0.3em">
+                        <img src="images/tri_logo_landscape.svg" alt="">
+                    </span>
+                </div>
+            </div>
+        </div>
+
         <h2 style="text-align: center; white-space: nowrap; font-size: 200%">
             Geometry-aware 4D Video Generation for Robot Manipulation
         </h2>
+
+        <h3 style="text-align: center; margin-top: -1em; margin-bottom: -1em;">
+            <span style="color: black"><a href="https://lzylucy.github.io/">Zeyi Liu<sup>1</sup></a> &nbsp&nbsp <a
+                    href="https://shuangli59.github.io/">Shuang Li<sup>1</sup></a>
+                &nbsp&nbsp <a href="https://eacousineau.com/">Eric Cousineau<sup>2</sup></a> &nbsp&nbsp <a
+                    href="https://www.cs.cmu.edu/~sfeng/">Siyuan Feng<sup>2</sup></a> &nbsp&nbsp
+                <a href="https://www.tri.global/about-us/dr-ben-burchfiel">Benjamin Burchfiel<sup>2</sup></a> &nbsp&nbsp <a
+                    href="https://shurans.github.io/">Shuran Song<sup>1</sup></a> <br>
+            </span>
+            <!-- <p style="margin-top:0.25em;"> <span style="color: #8C1515">Stanford University</span> &nbsp&nbsp 
+                <span style="color: #557aa0">Columbia University</span> &nbsp&nbsp
+                <span style="color: #EB0A1E">Toyota Research Institute</span> </p> -->
+            <p style="margin-top:0.25em;"><sup>1</sup>Stanford University &nbsp&nbsp&nbsp&nbsp
+                <sup>2</sup>Toyota Research Institute
+            </p>
+        </h3>
+
+        <div style="text-align:center; margin-bottom: 1em;">
+            <div>
+                <!-- PDF Link. -->
+                <span>
+                    <a href="" class="button">
+                        <span class="icon">
+                            <i class="fa fa-file-pdf-o"></i>
+                        </span>
+                        <span>Paper</span>
+                    </a>
+                </span>
+                <!-- Code Link. -->
+                <span>
+                    <a href="https://github.com/lzylucy/4dgen" class="button">
+                        <span class="icon">
+                            <i class="fa fa-github"></i>
+                        </span>
+                        <span>Code</span>
+                    </a>
+                </span>
+                <!-- Dataset Link. -->
+                <span>
+                    <a href="https://real.stanford.edu/4dgen" class="button">
+                        <span class="icon">
+                            <i class="fa fa-database"></i>
+                        </span>
+                        <span>Dataset</span>
+                    </a>
+                </span>
+            </div>
+        </div>
 
         <!-- <div style="text-align: center; margin: 2em 0;">
             <div style="display: flex; justify-content: center; gap: 60px; max-width: 90%; margin: 0 auto;">
@@ -705,13 +770,12 @@
             </div>
         </div>
 
-        <hr>
     </div>
 
-    <div style="text-align: center; justify-content: center; margin-top:15px; margin-bottom: 20px;">
+    <!-- <div style="text-align: center; justify-content: center; margin-top:15px; margin-bottom: 20px;">
         <a href="https://www.flaticon.com/free-icons/clapperboard" title="clapperboard icons">Clapperboard icons created
             by Prosymbols - Flaticon</a>
-    </div>
+    </div> -->
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
