--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div>
                 <!-- PDF Link. -->
                 <span>
-                    <a href="" class="button">
+                    <a href="https://arxiv.org/abs/2507.01099" class="button">
                         <span class="icon">
                             <i class="fa fa-file-pdf-o"></i>
                         </span>
