--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
             robust robot manipulation and generalization to novel camera viewpoints.
         </p> -->
 
-        <div style="text-align: center; margin: 2em 0 -1em 0;">
+        <div style="text-align: center; margin: 1em 0 -2em 0;">
             <video autoplay loop muted playsinline style="width: 80%; max-width: 800px;">
-                <source src="videos/teaser.mov" type="video/mp4">
+                <source src="videos/teaser.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
