Update title format

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <h1 class="main-title">
-                    Geometry-aware 4D Video Generation for Robot Manipulation
+                    Geometry-aware 4D Video Generation <br> for Robot Manipulation
                 </h1>
 
                 <div class="authors">
