--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
                 <div class="navigation">
                     <button class="nav-arrow" id="prevBtn7" onclick="switchVideo7(-1)">←</button>
-                    <div class="video-info" id="videoInfo7">Spatula</div>
+                    <div class="video-info" id="videoInfo7">Spatula (1 of 5)</div>
                     <button class="nav-arrow" id="nextBtn7" onclick="switchVideo7(1)">→</button>
                 </div>
 
