update real world result text

--- a/index.html
+++ b/index.html
@@ -488,10 +488,10 @@
             <!-- Task 4: Real World Results -->
             <div class="task-section">
                 <h3 class="task-title">
-                    🌍 (d) Real World Results
+                    (d) Real World Results 🌍
                 </h3>
                 <p class="task-description">
-                    Our method generalizes to real-world scenarios, demonstrating the ability to generate consistent RGB-D videos from actual robot manipulation data across various objects including bottles, cups, fruits, and kitchen utensils.
+                    By finetuning a policy trained in simulation, our model transfers to real world RGB-D videos for several manipulation tasks.
                 </p>
 
                 <div class="video-section-header">Generated RGB-D videos</div>
