revise TLDR section

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
             <div class="tldr-section">
                 <div class="tldr-content">
                     We propose a 4D video generation model that enforces geometric consistency across multiple views to
-                    produce spatio-temporally aligned RGB-D videos from a single RGB-D image per view. We further
-                    demonstrate its utility in downstream robot manipulation tasks through pose tracking.
+                    generate spatio-temporally aligned RGB-D videos from a single RGB-D image per view. We further
+                    demonstrate applications on robot manipulation by extracting gripper poses from the generated videos 
+                    with an off-the-shelf pose tracking algorithm.
                 </div>
             </div>
 
